--- a/Jal.Aop.Aspect/Jal.Aop.Aspects.csproj
+++ b/Jal.Aop.Aspect/Jal.Aop.Aspects.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A08CB451-AD9C-4205-98C1-6090ABE2FCAF}</ProjectGuid>
+    <ProjectGuid>{2FA32C76-7A52-4AD8-AE24-83BA0229571F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Jal.Aop</RootNamespace>
-    <AssemblyName>Jal.Aop</AssemblyName>
+    <RootNamespace>Jal.Aop.Aspects</RootNamespace>
+    <AssemblyName>Jal.Aop.Aspects</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,17 +40,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Impl\AbstractApect.cs" />
-    <Compile Include="Impl\AbstractAspectAttribute.cs" />
-    <Compile Include="Impl\PointCut.cs" />
-    <Compile Include="Impl\JoinPoint.cs" />
-    <Compile Include="Impl\OnMethodBoundaryAspect.cs" />
-    <Compile Include="Impl\OnRetryAspect.cs" />
-    <Compile Include="Interface\IAspect.cs" />
-    <Compile Include="Interface\IJoinPoint.cs" />
-    <Compile Include="Interface\IPointCut.cs" />
+    <Compile Include="Impl\NullAdviceFactory.cs" />
+    <Compile Include="Impl\NullAspectLogger.cs" />
+    <Compile Include="Impl\NullAspectSerializerFactory.cs" />
+    <Compile Include="Interface\IAspectSerializerFactory.cs" />
+    <Compile Include="Interface\IAdviceFactory.cs" />
+    <Compile Include="Interface\IExceptionAdvice.cs" />
+    <Compile Include="Interface\IAspectLogger.cs" />
+    <Compile Include="Interface\IAspectSerializer.cs" />
+    <Compile Include="Interface\IEntryAdvice.cs" />
+    <Compile Include="Interface\IExitAdvice.cs" />
+    <Compile Include="Interface\ISuccessAdvice.cs" />
+    <Compile Include="LogAspect.cs" />
+    <Compile Include="LogAspectAttribute.cs" />
+    <Compile Include="AroundMethodAspect.cs" />
+    <Compile Include="AroundMethodAspectAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Jal.Aop\Jal.Aop.csproj">
+      <Project>{A08CB451-AD9C-4205-98C1-6090ABE2FCAF}</Project>
+      <Name>Jal.Aop</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
