--- a/Jal.Aop.Aspects.Advice.Installer/Jal.Aop.Aspects.Advice.Installer.csproj
+++ b/Jal.Aop.Aspects.Advice.Installer/Jal.Aop.Aspects.Advice.Installer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A08CB451-AD9C-4205-98C1-6090ABE2FCAF}</ProjectGuid>
+    <ProjectGuid>{CF0FA1EA-C447-417B-82A9-C97E5B91BCCB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Jal.Aop</RootNamespace>
-    <AssemblyName>Jal.Aop</AssemblyName>
+    <RootNamespace>Jal.Aop.Aspects.Advice.Installer</RootNamespace>
+    <AssemblyName>Jal.Aop.Aspects.Advice.Installer</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core">
+      <HintPath>..\packages\Castle.Core.3.3.0\lib\net40-client\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Windsor">
+      <HintPath>..\packages\Castle.Windsor.3.3.0\lib\net40\Castle.Windsor.dll</HintPath>
+    </Reference>
+    <Reference Include="Jal.AssemblyFinder">
+      <HintPath>..\packages\Jal.AssemblyFinder.1.1.0.0\lib\net40\Jal.AssemblyFinder.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,16 +48,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Impl\AbstractApect.cs" />
-    <Compile Include="Impl\AbstractAspectAttribute.cs" />
-    <Compile Include="Impl\PointCut.cs" />
-    <Compile Include="Impl\JoinPoint.cs" />
-    <Compile Include="Impl\OnMethodBoundaryAspect.cs" />
-    <Compile Include="Impl\OnRetryAspect.cs" />
-    <Compile Include="Interface\IAspect.cs" />
-    <Compile Include="Interface\IJoinPoint.cs" />
-    <Compile Include="Interface\IPointCut.cs" />
+    <Compile Include="AspectAdviceInstaller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Jal.Aop.Aspects.Advice\Jal.Aop.Aspects.Advice.csproj">
+      <Project>{28275AAA-6CD3-4D0C-8842-472A1754E4E7}</Project>
+      <Name>Jal.Aop.Aspects.Advice</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Jal.Aop.Aspect\Jal.Aop.Aspects.csproj">
+      <Project>{2FA32C76-7A52-4AD8-AE24-83BA0229571F}</Project>
+      <Name>Jal.Aop.Aspects</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
