--- a/Jal.Aop.Aspects.Logger/Jal.Aop.Aspects.Logger.csproj
+++ b/Jal.Aop.Aspects.Logger/Jal.Aop.Aspects.Logger.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A08CB451-AD9C-4205-98C1-6090ABE2FCAF}</ProjectGuid>
+    <ProjectGuid>{33AB142A-F48C-4D01-B753-222508A0A28F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Jal.Aop</RootNamespace>
-    <AssemblyName>Jal.Aop</AssemblyName>
+    <RootNamespace>Jal.Aop.Aspects.Logger</RootNamespace>
+    <AssemblyName>Jal.Aop.Aspects.Logger</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Common.Logging.Core">
+      <HintPath>..\packages\Common.Logging.Core.3.3.1\lib\net40\Common.Logging.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,16 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Impl\AbstractApect.cs" />
-    <Compile Include="Impl\AbstractAspectAttribute.cs" />
-    <Compile Include="Impl\PointCut.cs" />
-    <Compile Include="Impl\JoinPoint.cs" />
-    <Compile Include="Impl\OnMethodBoundaryAspect.cs" />
-    <Compile Include="Impl\OnRetryAspect.cs" />
-    <Compile Include="Interface\IAspect.cs" />
-    <Compile Include="Interface\IJoinPoint.cs" />
-    <Compile Include="Interface\IPointCut.cs" />
+    <Compile Include="AspectLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Jal.Aop.Aspect\Jal.Aop.Aspects.csproj">
+      <Project>{2FA32C76-7A52-4AD8-AE24-83BA0229571F}</Project>
+      <Name>Jal.Aop.Aspects</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
