--- a/Jal.Aop.Installer/Jal.Aop.Installer.csproj
+++ b/Jal.Aop.Installer/Jal.Aop.Installer.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A08CB451-AD9C-4205-98C1-6090ABE2FCAF}</ProjectGuid>
+    <ProjectGuid>{244B3C09-B96C-4166-AD4C-C473B462564A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Jal.Aop</RootNamespace>
-    <AssemblyName>Jal.Aop</AssemblyName>
+    <RootNamespace>Jal.Aop.Installer</RootNamespace>
+    <AssemblyName>Jal.Aop.Installer</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,6 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core">
+      <HintPath>..\packages\Castle.Core.3.3.0\lib\net40-client\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Windsor">
+      <HintPath>..\packages\Castle.Windsor.3.3.0\lib\net40\Castle.Windsor.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,16 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Impl\AbstractApect.cs" />
-    <Compile Include="Impl\AbstractAspectAttribute.cs" />
-    <Compile Include="Impl\PointCut.cs" />
-    <Compile Include="Impl\JoinPoint.cs" />
-    <Compile Include="Impl\OnMethodBoundaryAspect.cs" />
-    <Compile Include="Impl\OnRetryAspect.cs" />
-    <Compile Include="Interface\IAspect.cs" />
-    <Compile Include="Interface\IJoinPoint.cs" />
-    <Compile Include="Interface\IPointCut.cs" />
+    <Compile Include="AopProxy.cs" />
+    <Compile Include="AutomaticInterception.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Jal.Aop\Jal.Aop.csproj">
+      <Project>{A08CB451-AD9C-4205-98C1-6090ABE2FCAF}</Project>
+      <Name>Jal.Aop</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
