--- a/Jal.Aop.Aspects.Logger.Installer/Jal.Aop.Aspects.Logger.Installer.csproj
+++ b/Jal.Aop.Aspects.Logger.Installer/Jal.Aop.Aspects.Logger.Installer.csproj
@@ -56,7 +56,7 @@
       <Project>{33AB142A-F48C-4D01-B753-222508A0A28F}</Project>
       <Name>Jal.Aop.Aspects.Logger</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Jal.Aop.Aspect\Jal.Aop.Aspects.csproj">
+    <ProjectReference Include="..\Jal.Aop.Aspects\Jal.Aop.Aspects.csproj">
       <Project>{2FA32C76-7A52-4AD8-AE24-83BA0229571F}</Project>
       <Name>Jal.Aop.Aspects</Name>
     </ProjectReference>
