--- a/Jal.Aop.LightInject.Aspect.Installer/Jal.Aop.LightInject.Aspect.Installer.csproj
+++ b/Jal.Aop.LightInject.Aspect.Installer/Jal.Aop.LightInject.Aspect.Installer.csproj
@@ -1,17 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{74C10962-CDC5-4474-A258-0C2B3226F6C9}</ProjectGuid>
+    <ProjectGuid>{578B73F6-3908-4DD2-8EF0-C33C1C72E093}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Jal.Aop.Tests</RootNamespace>
-    <AssemblyName>Jal.Aop.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <RootNamespace>Jal.Aop.LightInject.Aspect.Installer</RootNamespace>
+    <AssemblyName>Jal.Aop.LightInject.Aspect.Installer</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,7 +20,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,24 +28,15 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Castle.Core.3.3.0\lib\net40-client\Castle.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Castle.Windsor, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Castle.Windsor.3.3.0\lib\net40\Castle.Windsor.dll</HintPath>
-    </Reference>
-    <Reference Include="Jal.Finder, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Jal.Finder.1.0.1.0\lib\net40\Jal.Finder.dll</HintPath>
+    <Reference Include="LightInject, Version=4.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\LightInject.4.1.0\lib\net45\LightInject.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    <Reference Include="LightInject.Interception, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\LightInject.Interception.1.1.0\lib\net45\LightInject.Interception.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -55,39 +44,33 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DumbClass.cs" />
+    <Compile Include="ServiceContainerExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Test.cs" />
-    <Compile Include="TestMethodBoundaryAspect3.cs" />
-    <Compile Include="TestMethodBoundaryAspect2.cs" />
-    <Compile Include="TestMethodBoundaryAspect.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Jal.Aop.Aspects.Installer\Jal.Aop.Aspects.Installer.csproj">
-      <Project>{C3A8D041-F86F-4B2B-9EC7-AD1C026263D5}</Project>
-      <Name>Jal.Aop.Aspects.Installer</Name>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Jal.Aop.Aspects.Advice\Jal.Aop.Aspects.Advice.csproj">
+      <Project>{28275aaa-6cd3-4d0c-8842-472a1754e4e7}</Project>
+      <Name>Jal.Aop.Aspects.Advice</Name>
     </ProjectReference>
     <ProjectReference Include="..\Jal.Aop.Aspects\Jal.Aop.Aspects.csproj">
-      <Project>{2fa32c76-7a52-4ad8-ae24-83ba0229571f}</Project>
+      <Project>{2FA32C76-7A52-4AD8-AE24-83BA0229571F}</Project>
       <Name>Jal.Aop.Aspects</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Jal.Aop.CastleWindsor\Jal.Aop.CastleWindsor.csproj">
-      <Project>{244b3c09-b96c-4166-ad4c-c473b462564a}</Project>
-      <Name>Jal.Aop.CastleWindsor</Name>
+    <ProjectReference Include="..\Jal.Aop.LightInject\Jal.Aop.LightInject.csproj">
+      <Project>{E490561D-8AFD-44B6-9455-8E5217E1C57A}</Project>
+      <Name>Jal.Aop.LightInject</Name>
     </ProjectReference>
     <ProjectReference Include="..\Jal.Aop\Jal.Aop.csproj">
       <Project>{A08CB451-AD9C-4205-98C1-6090ABE2FCAF}</Project>
       <Name>Jal.Aop</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
