--- a/Jal.Aop.LightInject.Tests/Jal.Aop.LightInject.Tests.csproj
+++ b/Jal.Aop.LightInject.Tests/Jal.Aop.LightInject.Tests.csproj
@@ -80,6 +80,10 @@
     <Compile Include="TestMethodBoundaryAspect3.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Jal.Aop.Aspects.Serializer\Jal.Aop.Aspects.Serializer.csproj">
+      <Project>{417DA4FD-83C9-4126-B506-2DAD884570A3}</Project>
+      <Name>Jal.Aop.Aspects.Serializer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Jal.Aop.Aspects\Jal.Aop.Aspects.csproj">
       <Project>{2FA32C76-7A52-4AD8-AE24-83BA0229571F}</Project>
       <Name>Jal.Aop.Aspects</Name>
