--- a/Jal.Aop.Aspects.Serializer.Json/Jal.Aop.Aspects.Serializer.Json.csproj
+++ b/Jal.Aop.Aspects.Serializer.Json/Jal.Aop.Aspects.Serializer.Json.csproj
@@ -47,6 +47,9 @@
   <ItemGroup>
     <Compile Include="AspectJsonSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SensitiveDataAspectJsonSerializer.cs" />
+    <Compile Include="SensitiveDataResolver.cs" />
+    <Compile Include="SensitiveDataValueProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Jal.Aop.Aspects\Jal.Aop.Aspects.csproj">
