--- a/Jal.Aop.Aspects/Jal.Aop.Aspects.csproj
+++ b/Jal.Aop.Aspects/Jal.Aop.Aspects.csproj
@@ -1,78 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2FA32C76-7A52-4AD8-AE24-83BA0229571F}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Jal.Aop.Aspects</RootNamespace>
-    <AssemblyName>Jal.Aop.Aspects</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
+    <Authors>Raul Naupari</Authors>
+    <Version>1.1.0</Version>
+    <Company>Raul Naupari</Company>
+    <Description>Useful aspects created based on the Jal.Aop library</Description>
+    <Copyright />
+    <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/raulnq/Jal.Aop</PackageProjectUrl>
+    <RepositoryUrl></RepositoryUrl>
+    <PackageTags />
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Transactions" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <ProjectReference Include="..\Jal.Aop\Jal.Aop.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Impl\NullAdviceFactory.cs" />
-    <Compile Include="Impl\NullAspectLogger.cs" />
-    <Compile Include="Impl\NullAspectSerializerFactory.cs" />
-    <Compile Include="Interface\IAspectSerializerFactory.cs" />
-    <Compile Include="Interface\IAdviceFactory.cs" />
-    <Compile Include="Interface\ICorrelationIdProvider.cs" />
-    <Compile Include="Interface\ICorrelationIdProviderFactory.cs" />
-    <Compile Include="Interface\IExceptionAdvice.cs" />
-    <Compile Include="Interface\IAspectLogger.cs" />
-    <Compile Include="Interface\IAspectSerializer.cs" />
-    <Compile Include="Interface\IEntryAdvice.cs" />
-    <Compile Include="Interface\IExitAdvice.cs" />
-    <Compile Include="Interface\ISuccessAdvice.cs" />
-    <Compile Include="Impl\NullCorrelationIdProviderFactory.cs" />
-    <Compile Include="LogAspect.cs" />
-    <Compile Include="LogAspectAttribute.cs" />
-    <Compile Include="AroundMethodAspect.cs" />
-    <Compile Include="AroundMethodAspectAttribute.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Jal.Aop\Jal.Aop.csproj">
-      <Project>{A08CB451-AD9C-4205-98C1-6090ABE2FCAF}</Project>
-      <Name>Jal.Aop</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  
 </Project>
