--- a/Jal.Aop.LightInject.All/Jal.Aop.LightInject.All.csproj
+++ b/Jal.Aop.LightInject.All/Jal.Aop.LightInject.All.csproj
@@ -1,12 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Description>LightInject stack of the Jal.Aop library</Description>
-    <Company>Raul Naupari</Company>
+    <Version>1.0.1</Version>
     <Authors>Raul Naupari</Authors>
+    <Company>Raul Naupari</Company>
     <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/raulnq/Jal.Aop</PackageProjectUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
