--- a/Jal.Aop.Aspects.Logger.Serilog/Jal.Aop.Aspects.Logger.Serilog.csproj
+++ b/Jal.Aop.Aspects.Logger.Serilog/Jal.Aop.Aspects.Logger.Serilog.csproj
@@ -3,20 +3,19 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Raul Naupari</Authors>
-    <Version>1.1.1</Version>
+    <Version>1.0.0</Version>
     <Company>Raul Naupari</Company>
-    <Description>Advice factory created for the Jal.Aop.Aspects library</Description>
+    <Description>Logger integration (Serilog) for the Jal.Aop.Aspects library</Description>
     <Copyright />
     <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/raulnq/Jal.Aop</PackageProjectUrl>
     <RepositoryUrl></RepositoryUrl>
     <PackageTags />
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Jal.Locator" Version="1.1.1" />
+    <PackageReference Include="Serilog" Version="2.5.0" />
   </ItemGroup>
 
   <ItemGroup>
