--- a/Jal.Aop.Aspects.Serializer.Json/Jal.Aop.Aspects.Serializer.Json.csproj
+++ b/Jal.Aop.Aspects.Serializer.Json/Jal.Aop.Aspects.Serializer.Json.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Raul Naupari</Authors>
-    <Version>1.1.0</Version>
+    <Version>1.1.1</Version>
     <Company>Raul Naupari</Company>
     <Description>Json serializer created for the Jal.Aop.Aspects library</Description>
     <Copyright />
@@ -11,6 +11,7 @@
     <PackageProjectUrl>https://github.com/raulnq/Jal.Aop</PackageProjectUrl>
     <RepositoryUrl></RepositoryUrl>
     <PackageTags />
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
