--- a/Jal.Aop.Aspects/Jal.Aop.Aspects.csproj
+++ b/Jal.Aop.Aspects/Jal.Aop.Aspects.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Raul Naupari</Authors>
-    <Version>1.1.0</Version>
+    <Version>1.1.1</Version>
     <Company>Raul Naupari</Company>
     <Description>Useful aspects created based on the Jal.Aop library</Description>
     <Copyright />
@@ -11,6 +11,8 @@
     <PackageProjectUrl>https://github.com/raulnq/Jal.Aop</PackageProjectUrl>
     <RepositoryUrl></RepositoryUrl>
     <PackageTags />
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
