--- a/Jal.Aop.LightInject.Aspects.Logger.Serilog.Installer/Jal.Aop.LightInject.Aspects.Logger.Serilog.Installer.csproj
+++ b/Jal.Aop.LightInject.Aspects.Logger.Serilog.Installer/Jal.Aop.LightInject.Aspects.Logger.Serilog.Installer.csproj
@@ -3,23 +3,23 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Raul Naupari</Authors>
-    <Version>1.1.1</Version>
+    <Version>1.0.0</Version>
     <Company>Raul Naupari</Company>
-    <Description>Advice factory created for the Jal.Aop.Aspects library</Description>
+    <Description>LightInject composition root for the Jal.Aop.Aspects.Logger.Serilog library</Description>
     <Copyright />
     <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/raulnq/Jal.Aop</PackageProjectUrl>
     <RepositoryUrl></RepositoryUrl>
     <PackageTags />
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Jal.Locator" Version="1.1.1" />
+    <PackageReference Include="LightInject" Version="5.1.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Jal.Aop.Aspects.Logger.Serilog\Jal.Aop.Aspects.Logger.Serilog.csproj" />
     <ProjectReference Include="..\Jal.Aop.Aspects\Jal.Aop.Aspects.csproj" />
   </ItemGroup>
   
