--- a/Jal.Aop.LightInject.Tests/App.config
+++ b/Jal.Aop.LightInject.Tests/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="common">
@@ -15,4 +15,4 @@
       </factoryAdapter>
     </logging>
   </common>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/></startup></configuration>
