--- a/Jal.Aop.LightInject.Tests/packages.config
+++ b/Jal.Aop.LightInject.Tests/packages.config
@@ -5,7 +5,7 @@
   <package id="Jal.Finder" version="1.1.1" targetFramework="net45" />
   <package id="Jal.Locator" version="1.1.1" targetFramework="net45" />
   <package id="Jal.Locator.LightInject" version="1.1.1" targetFramework="net45" />
-  <package id="LightInject" version="5.1.3" targetFramework="net45" />
+  <package id="LightInject" version="5.1.3" targetFramework="net45" requireReinstallation="true" />
   <package id="LightInject.Interception" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net45" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net45" />
@@ -15,29 +15,29 @@
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net45" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net45" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net45" />
-  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net45" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net45" />
-  <package id="System.IO" version="4.3.0" targetFramework="net45" />
-  <package id="System.IO.Compression" version="4.3.0" targetFramework="net45" />
-  <package id="System.Linq" version="4.3.0" targetFramework="net45" />
-  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net45" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="net45" />
+  <package id="System.IO" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Net.Http" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net45" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net45" />
-  <package id="System.Reflection" version="4.3.0" targetFramework="net45" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net45" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net45" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net45" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net45" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net45" />
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net45" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net45" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net45" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net45" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net45" />
-  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net45" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Threading" version="4.3.0" targetFramework="net45" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net45" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net45" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net45" />
 </packages>
