Native Net Standard Proxy

--- a/Jal.Aop.Tests/Jal.Aop.Tests.csproj
+++ b/Jal.Aop.Tests/Jal.Aop.Tests.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\Jal.Aop.Aspects.Installer\Jal.Aop.Aspects.Installer.csproj" />
     <ProjectReference Include="..\Jal.Aop.Aspects.Logger.Serilog\Jal.Aop.Aspects.Logger.Serilog.csproj" />
     <ProjectReference Include="..\Jal.Aop.LightInject.Aspect.Installer\Jal.Aop.LightInject.Aspect.Installer.csproj" />
+    <ProjectReference Include="..\Jal.Aop.Proxy.Apects.Microsoft.Extensions.DependencyInjection.Installer\Jal.Aop.Apects.Microsoft.Extensions.DependencyInjection.Installer.csproj" />
   </ItemGroup>
 
 </Project>
